fixed the overflowing issues

--- a/style.css
+++ b/style.css
@@ -437,11 +437,14 @@ h4{
     */
    
 }
+
+
 .card{
     width: 348px;
     display: flex;
     flex-direction: column;
     background-color: #fff;
+    position: relative;
    
 }
 
@@ -464,6 +467,17 @@ h4{
    z-index: 1;
    color: #fff;
 }
+
+.icons-five {
+    position: absolute;
+    top: 42%;
+    left: 40%;
+    /* margin: auto; */
+    /* text-align: center; */
+
+}
+
+
 /* .buttons-five{
     position: absolute;
     background-color: #E74040;
@@ -569,8 +583,7 @@ span{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    /* align-items: center; */
-    
+    align-items: center;
 }
 
 
@@ -730,6 +743,7 @@ color: #fff;
     flex-direction: column;
     align-items: flex-start; */
     padding: 50px 0px;
+   
 }
 
 
@@ -737,6 +751,7 @@ color: #fff;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+   
 }
 .main-col{
     
@@ -748,12 +763,14 @@ justify-content: center;
 flex-direction: column;
 background-color: #fff;
 /* padding: 0px 80px; */
+
 }
 
 .main-sub{
     display: flex;
-   padding: 40px 0px;
+   padding: 20px 0px;
    justify-content: center;
+  
 }
 
 .sub-col{
@@ -962,6 +979,11 @@ nav ul li{
   
 }
 
+.five-head{
+    padding: 0px 20px;
+    margin: 10px 0px;
+}
+
 /* .five-head{
    justify-content: center;
     align-items: center;
@@ -973,7 +995,7 @@ nav ul li{
 .main-five{ 
     display: flex;
     flex-direction: column;
-    align-items: center;
+    /* align-items: center; */
     padding: 30px 0px;
 }
 .pad{
